fix overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,11 @@ input {
   display: block;
   outline: none;
 }
+
+body.modal-open {
+  overflow: hidden;
+}
+
 /* Root styles */
 
 :root {
